2004-05-26  Todd Berman  <tberman@sevenl.net>

	* Services/Project/DefaultProjectService.cs: auto-generate makefiles
	on changes. I think i hit all the needed events, lets see.

2004-05-26  Todd Berman  <tberman@sevenl.net>

	* Services/ParserService/DefaultParserService.cs: Update Monodoc
	and IsAs resolvers.
	* Services/ParserService/IParserService.cs: Expose new search type
	method for use in Monodoc and IsAs resolvers.
	* Internal/Parser/IParser.cs: Update Monodoc and IsAs resolvers.
	* Gui/Pads/ClassScout/ClassScout.cs: add a null check to workaround
	a *strange* nullref that keeps popping up.

2004-05-26  Lluis Sanchez Gual  <lluis@ximian.com>

	* Services/ParserService/DefaultParserService.cs: Type names for fields,
	  parameters, base classes and so on come unresolved from the parser
	  (without namespace information). They must be resolved before adding them
	  to the database. This is done through the method ResolveTypes.
	* CodeCompletionDatabase.cs: Resolve type names before adding the class to
	  the database.
	* PersistentIndexer.cs, PersistentParameter.cs, PersistentMethod.cs,
	  PersistentReturnType.cs, PersistentEvent.cs, PersistentField.cs,
	  PersistentProperty.cs, PersistentClass.cs: Added method for resolving
	  the type names.

2004-05-25  Todd Berman  <tberman@sevenl.net>

	* Services/ParserService/DefaultParserService.cs: create the directory
	if it doesnt exist.

2004-05-25  Lluis Sanchez Gual  <lluis@ximian.com>

	* Services/File/DefaultFileService.cs: Enabled database regeneration for
	  modified assemblies.

2004-05-25  Lluis Sanchez Gual  <lluis@ximian.com>

	* Commands/ProjectBrowserCommands/ReferenceFolderNodeCommands.cs:
	  Removed call to IParserService.AddReferenceToCompletionLookup. The parser
	  service now receives an event when a reference is added.
	  
	* Commands/AutostartCommands.cs: Disabled generation of initial code
	  completion database.
	  
	* Services/File/DefaultFileService.cs: In LoadFileWrapper, use IProject